[package]
name = "proto-mc"
description = "minecraft protocols i guess"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["rt", "time", "net", "io-util", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }